--- a/frontend_mui/package.json
+++ b/frontend_mui/package.json
@@ -2,6 +2,7 @@
   "name": "frontend_mui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://anshumemorial.in/mui",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
